--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tanmai Kamat Profile</title>
+</head>
+<body>
+
+    <div id="Profile_Heading">
+        <!-- <img src="pic.jfif"> -->
+        <h1>My name is Tanmai Kamat</h1>
+        
+    </div>
+    <div id="My_Achievements">
+        <h1>Achievements</h1>
+    </div>
+
+    <div id="Profiles">
+        <h1>Profiles</h1>
+    </div>
+</body>
+</html>
